samples/_failures_safe/1761141869_5aa4f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46242521.c: In function ‘main’:
./samples/SAFE/__tmp_46242521.c:141:12: error: missing terminating " character
  141 |     printf("Enter input to tokenize:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_46242521.c:141:5: error: expected expression at end of input
  141 |     printf("Enter input to tokenize:
      |     ^~~~~~
./samples/SAFE/__tmp_46242521.c:141:5: error: expected declaration or statement at end of input
